5/28/2013 (v. 0.58):
+: Fixed a bug with the steady growth
+: Fixed database creation serious bug

5/27/2013 (v. 0.57):
+: Fixed size line charts and colors (chars and table)

5/26/2013 (v. 0.56):
+: Added NumSensorsDialog [Experimental]
+: Fixed DataBaseEngine
+: Added dynamic count of sensors [Experimental]
+: Added Forecast point
+: Fixed scale chart for third plot

5/24/2013 (v. 0.55):
+: Fixed avrg forecast vectors.
+: Trying Level II of decomposition.
+: Finished Level II of decomposition.
+: Refactoring.
+: Added HTML Reports on Levels

5/20/2013 (v. 0.54):
+: Fixed calc forecast values.
+: Fixed Translations int table.
+: Finally ended Level One.

5/16/2013 (v. 0.53):
+: Fixed Opening/Saving file dialog

5/13/2013 (v. 0.52):
+: Push SensorMonitor to GitHub

5/8/2013 (v. 0.51):
+: Fixed LoadTable
+: Added SensorsScheme
+: Fixed SensorScheme

5/4/2013 (v. 0.5):
+: Full code refactoring
+: Fixed Memory Leaked
+: Chandged UI
+: Added save window state and geometry after closing

4/9/2013 (v. 0.43):
+: Fixed "Level One" tab
+: Trying translations to Russian
+: Added resource file

3/26/2013 (v. 0.43):
+: Added plot into tab5
+: Calculate "Alpha"

3/21/2013 (v. 0.42):
+: Added statusBar (footer)
+: Calculation "Mu"
+: Update tables on tabs
+: Experiments with tabs
+: Fixed const "col"
+: Crosscompiled for Linux x64_86 (Mint 14)
+: Fixed variables for Linux
+: Edit "*.pro" file for crosscompiling

3/19/2013 (v. 0.41):
+: Added Generate HTML table func
+: Added DEFINE
+: Fixed MAX cells in SQLite Table
+: Added example tabs

3/18/2013 (v. 0.4):
+: Transformation 8 sensors to 16 sensors
+: Added Date to plot
+: Added read Arr from DATA file
+: Fixed save/read DATA file
+: Maximized main window
+: Fixed save/read TEXT file
+: Added ToolTips for Buttons
+: Added label to main window (widget)
+: Added example levels implemintation to third tab from QGridLayout (trying)

3/5/2013 (v. 0.3):
+: Added RegExp for check double/float